updated openApi docs, added new params and descriptions
